Revision history for Spreadsheet-HTML

0.08
    - major refactor of internals (interface unchanged)
    - more modular and flexible

0.07
    - added matrix attr (plain headings)
    - added portrait and landscape aliases
    - encode attr correctly accepts undef now
      (allows HTML::Element to encode all unsafe chars)

0.06    
    - using HTML::Element
    - H::E handles encoding and indention
    - refactored arg handling
    - added table attrs
    - corrected license ref
    - TODO: make th and td attrs non-global 

0.05    Corrected build and unit testing

0.04    Temporarily allowing DBIx::HTML to subclass.

0.03    Major refactoring, able to transpose.

0.02    First version, released on an unsuspecting world.
